samples/_failures_safe/1761140361_aab53e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d2ac26c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_5d2ac26c.c:141:5: error: expected expression at end of input
  141 |     while (count < max_tokens)
      |     ^~~~~
./samples/SAFE/__tmp_5d2ac26c.c:141:5: error: expected declaration or statement at end of input
